--- a/src/advanced/advanced-layout-1.html
+++ b/src/advanced/advanced-layout-1.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Advanced Layout 1</title>
-    <link rel="stylesheet" href="../style.css" />
-    <style>
-      /* Doe hier jouw ding! */
-    </style>
-  </head>
-  <body id="advanced-layout-1">
-    <header><h1>Advanced Layout 1</h1></header>
-    <nav><a href="../index.html">Terug naar het overzicht</a></nav>
-    <main></main>
-    <footer></footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Advanced Layout 1</title>
+  <link rel="stylesheet" href="../style.css" />
+  <style>
+    /* Doe hier jouw ding! */
+    #advanced-layout-1 {
+      display: grid;
+      grid-template-columns: [first] 1fr ;
+      grid-template-rows: repeat (4, 200px [first] ); 
+      gap: 20px;
+    }
+
+    header {
+      grid-column: 1 / span auto;
+  grid-row: first-line / auto;
+    }
+  </style>
+</head>
+
+<body id="advanced-layout-1">
+  <header>
+    <h1>Advanced Layout 1</h1>
+  </header>
+  <nav><a href="../index.html">Terug naar het overzicht</a></nav>
+  <main></main>
+  <footer></footer>
+</body>
+
 </html>
