--- a/src/basic/basic-layout-3.html
+++ b/src/basic/basic-layout-3.html
@@ -10,26 +10,36 @@
       #basic-layout-3 {
         display: grid;
         gap: 10px;
-        
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
       }
 
       main {
-        grid-row-start:1 ;
-        grid-row-end: span 10;
-        grid-column-start: 1;
-  grid-column-end: span auto;
+        grid-row-start: 1;
+        grid-row-end: 5;
+        grid-column-start: 2;
+        grid-column-end: 4;
       }
 
       footer {
-        grid-row-start: 11;
-        grid-row-end: span 2;
-        grid-column-start: 1;
-  grid-column-end: span auto;
+        grid-row-start: 5;
+        grid-row-end: 5;
+        grid-column-start: 2;
+        grid-column-end: 4;
       }
 
       header {
-        
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 6;
+        grid-row-end:6 ;
+      }
 
+      nav {
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 6;
+        grid-row-end:6 ;
       }
     </style>
   </head>
