--- a/src/basic/basic-layout-5.html
+++ b/src/basic/basic-layout-5.html
@@ -12,41 +12,41 @@
       display: grid;
 
       grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 
       gap: 10px;
     }
 
     header {
       grid-row-start: 1;
-      grid-column-start: 1;
+      grid-column-start: 2;
 
       grid-row-end: 2;
-      grid-column-end: 5;
+      grid-column-end: 6;
     }
 
     main {
       grid-row-start: 2;
-      grid-column-start: 1;
+      grid-column-start: 2;
 
       grid-row-end: 6;
-      grid-column-end: 3;
+      grid-column-end: 4;
     }
 
     footer {
       grid-row-start: 5;
-      grid-column-start: 3;
+      grid-column-start: 4;
 
       grid-row-end: 6;
-      grid-column-end: 5;
+      grid-column-end: 6;
     }
 
     nav {
       grid-row-start: 2;
-      grid-column-start: 3;
+      grid-column-start: 4;
 
       grid-row-end: 5;
-      grid-column-end: 5;
+      grid-column-end: 6;
     }
   </style>
 </head>
