--- a/src/basic/basic-layout-8.html
+++ b/src/basic/basic-layout-8.html
@@ -7,6 +7,45 @@
     <link rel="stylesheet" href="../style.css" />
     <style>
       /* Doe hier jouw ding! */
+      #basic-layout-8 {
+        display: grid;
+
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+
+        gap: 10px;
+      }
+
+      header {
+        grid-row-start: 1;
+        grid-column-start: 2;
+
+        grid-row-end: 2;
+        grid-column-end: 5;
+      }
+
+      nav {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 2;
+        grid-row-end: 8;
+      }
+
+      main {
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 2;
+        grid-row-end: 8;
+
+      }
+
+      footer {
+        grid-column-start: 4;
+        grid-column-end: 4;
+        grid-row-start: 2;
+        grid-row-end: 8;
+
+      }
     </style>
   </head>
   <body id="basic-layout-8">
