--- a/src/basic/basic-layout-6.html
+++ b/src/basic/basic-layout-6.html
@@ -11,37 +11,35 @@
     #basic-layout-6 {
       display: grid;
       grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      gap: 10px;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+      gap: 15px;
     }
 
     header {
-      grid-row-start: 1;
-      grid-column-start: 1;
-      grid-row-end: 2;
-      grid-column-end: 4;
+      grid-column-start: 2;
+      grid-column-end: 5;
     }
 
     nav {
       grid-row-start: 2;
-      grid-column-start: 1;
+      grid-column-start: 2;
       grid-row-end: 6;
       grid-column-end: 2;
     }
 
     main {
       grid-row-start: 2;
-      grid-column-start: 2;
-      grid-row-end: 6;
-      grid-column-end: 4;
-    }
-
-    footer {
-      grid-row-start: 1;
-      grid-column-start: 4;
+      grid-column-start: 3;
       grid-row-end: 6;
       grid-column-end: 5;
 
+    }
+
+    footer {
+      grid-column-start: 5;
+      grid-column-end:5;
+      grid-row-start: 1;
+      grid-row-end: 6;
     }
   </style>
 </head>
