--- a/src/basic/basic-layout-7.html
+++ b/src/basic/basic-layout-7.html
@@ -11,38 +11,38 @@
     #basic-layout-7 {
       display: grid;
       grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
       gap: 10px;
 
     }
 
     nav {
       grid-row-start: 1;
-      grid-column-start: 1;
+      grid-column-start: 2;
       grid-row-end: 7;
       grid-column-end: 2;
     }
 
     footer {
-      grid-row-start: 5;
-      grid-column-start: 2;
+      grid-row-start: 6;
+      grid-column-start: 3;
       grid-row-end: 6;
-      grid-column-end: 5;
+      grid-column-end: 6;
     }
 
     main {
       grid-row-start: 2;
-   grid-column-start: 2;
+   grid-column-start: 3;
 
-   grid-row-end: 5;
-   grid-column-end: 5;
+   grid-row-end: 6;
+   grid-column-end: 6;
     }
 
     header {
-      grid-row-start: 2;
-      grid-column-start: 2;
-      grid-row-end: 5;
-      grid-column-end: 5;
+      grid-row-start: 1;
+      grid-column-start: 3;
+      grid-row-end: 2;
+      grid-column-end: 6;
     }
   </style>
 </head>
