--- a/src/basic/basic-layout-4.html
+++ b/src/basic/basic-layout-4.html
@@ -12,38 +12,38 @@
       display: grid;
 
       grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
       gap: 10px;
 
     }
 
     main {
       grid-row-start: 1;
-      grid-column-start: 1;
-
-      grid-row-end: 4;
-      grid-column-end: 4;
-    }
-
-    footer {
-      grid-row-start: 4;
-      grid-column-start: 1;
-
-      grid-row-end: 7;
-      grid-column-end: 4;
-    }
-
-    header {
-      grid-row-start: 1;
-      grid-column-start: 4;
+      grid-column-start: 2;
 
       grid-row-end: 4;
       grid-column-end: 5;
     }
 
+    footer {
+      grid-row-start: 4;
+      grid-column-start: 2;
+
+      grid-row-end: 7;
+      grid-column-end: 5;
+    }
+
+    header {
+      grid-row-start: 1;
+      grid-column-start: 5;
+
+      grid-row-end: 4;
+      grid-column-end: 6;
+    }
+
     nav {
       grid-row-start: 4;
-      grid-column-start: 4;
+      grid-column-start: 5;
 
       grid-row-end: 7;
       grid-column-end: 5;
